@@ -33,6 +33,7 @@ extern void new_oth_window(void);
 extern void new_bluecube_window(void);
 extern void new_itunes_window(void);
 extern void new_pong_window(void);
+extern void new_mines_window(void);
 
 static GR_WINDOW_ID menu_wid;
 static GR_GC_ID menu_gc;
@@ -61,6 +62,7 @@ static struct menu_item games_menu[] = {
 	{"Othello", ACTION_MENU, new_oth_window},
 	{"BlueCube", ACTION_MENU, new_bluecube_window},
 	{"Pong", ACTION_MENU, new_pong_window},
+	{"Nimesweeper", ACTION_MENU, new_mines_window},
 	{0, 0, 0}
 };
 
