@@ -1,4 +1,7 @@
 
+leachbj - Sat Septemper  4 2004
+	merged Nimesweeper port from matthis
+
 courtc - Sun July 11 2004
 	added pong game
 
